--- a/marketplace/twitter.mdx
+++ b/marketplace/twitter.mdx
@@ -4,7 +4,7 @@ description: 'Posts, likes, retweets, and metadata from collected public tweets 
 icon: 'x'
 ---
 
-This dataset is collected by [Subnet 0](/scout/introduction) and organized into two main tables: **profiles** and **tweets**.
+This dataset is collected by [Scout](/scout/introduction) and organized into two main tables: **profiles** and **tweets**.
 
 The **profiles** table contains information about Twitter user profiles, with the following columns:
 
