--- a/marketplace/verified.mdx
+++ b/marketplace/verified.mdx
@@ -15,6 +15,9 @@ icon: 'database'
   <Card title='Reddit' icon='Reddit' href='/marketplace/linkedin'>
     Posts, comments, and subbreddits.
   </Card>
+  <Card title='Farcaster' icon='wand-magic' href='/marketplace/farcaster'>
+    Casts, reactions, and profiles (via the Indexing Co.)
+  </Card>
   <Card title='Pango' icon='Computer' href='/pango/introduction'>
     The largest computer use trajectory dataset on market.
   </Card>
