--- a/overview.mdx
+++ b/overview.mdx
@@ -22,14 +22,13 @@ We **aim to provide** a fast, cost-efficient, and collaborative experience for d
   <Card title='Data Marketplace' icon='shop' href='/marketplace/introduction'>
     Discover and share valuable datasets with the community
   </Card>
-  <Card
-    title='Scout - Subnet 0'
-    icon='screwdriver-wrench'
-    href='/scout/introduction'
-  >
-    Contribute textual corpuses to the data marketplace.
+  <Card title='SN0: Scout' icon='screwdriver-wrench' href='/scout/introduction'>
+    Structured data from the web.
   </Card>
-  <Card title='Pango - Subnet 1' icon='pencil' href='/pango/introduction'>
-    Contribute computer use trajectory data to the data marketplace.
+  <Card title='SN1: Pango' icon='pencil' href='/pango/introduction'>
+    The largest dataset of human computer-use trajectories.
+  </Card>
+  <Card title='SN2: Dojo (Coming Soon)' icon='computer'>
+    Computer Use RL Environments at Massive Scale.
   </Card>
 </CardGroup>
