--- a/products.mdx
+++ b/products.mdx
@@ -13,17 +13,13 @@ icon: 'globe'
   <Card title='Data Marketplace' icon='code' href='/marketplace'>
     Access the most important datasets, sitting atop the data warehouse.
   </Card>
-  <Card
-    title='Scout - Subnet 0'
-    icon='screwdriver-wrench'
-    href='/scout/introduction'
-  >
-    Contribute textual corpuses to the data marketplace.
+  <Card title='SN0: Scout' icon='screwdriver-wrench' href='/scout/introduction'>
+    Structured data from the web.
   </Card>
-  <Card title='Pango - Subnet 1' icon='pencil' href='/pango/introduction'>
-    Contribute computer use trajectory data to the data marketplace.
+  <Card title='SN1: Pango' icon='pencil' href='/pango/introduction'>
+    The largest dataset of human computer-use trajectories.
   </Card>
-  <Card title='API Docs' icon='code' href='/api-reference'>
-    Query and transform your warehouse and marketplace datasets programmatically
+  <Card title='SN2: Dojo (Coming Soon)' icon='computer'>
+    Computer Use RL Environments at Massive Scale.
   </Card>
 </CardGroup>
