--- a/marketplace/linkedin.mdx
+++ b/marketplace/linkedin.mdx
@@ -4,7 +4,7 @@ description: 'Candidate and company LinkedIn profiles.'
 icon: 'linkedin'
 ---
 
-This dataset is collected by [Subnet 0](/scout/introduction) and organized into two main tables: **companies** and **profiles**.
+This dataset is collected by [Scout](/scout/introduction) and organized into two main tables: **companies** and **profiles**.
 
 The **companies** table contains information about LinkedIn companies, with the following columns:
 
