--- a/marketplace/reddit.mdx
+++ b/marketplace/reddit.mdx
@@ -4,7 +4,7 @@ description: 'Posts, comments, and subreddits.'
 icon: 'reddit'
 ---
 
-This dataset is collected by [Subnet 0](/scout/introduction) and organized into three main tables: **posts**, **comments**, and **subreddits**.
+This dataset is collected by [Scout](/scout/introduction) and organized into three main tables: **posts**, **comments**, and **subreddits**.
 
 The **posts** table contains information about Reddit posts, with the following columns:
 
